# self-racing-carla

./: .env.example  .gitignore  Makefile  bridge.py  client_local.py  index.html  pygame_client.py  pyproject.toml  race.html  race_client.py  setup_nvidia_driver.sh
scripts/: integration_race.py
src/carla_race/: __init__.py  ai_driver.py  bridge_ext.py  circuit.py  collision_scoring.py  config.py  lap_tracker.py  map_pool.py  race_manager.py  race_state.py  scoring.py  traffic.py  vehicle_grid.py
tests/: test_ai_driver.py  test_bridge_ext.py  test_circuit.py  test_collision_scoring.py  test_config.py  test_lap_tracker.py  test_map_pool.py  test_race_manager.py  test_race_state.py  test_scoring.py  test_traffic.py  test_vehicle_grid.py
