[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carla-race"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pillow>=10",
    "numpy>=1.24",
    # carla==0.9.15 server-side only, not listed (local dev has no CARLA)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]
client = [
    "pygame>=2.5",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: requires live CARLA (skipped by default)",
    "e2e: manual end-to-end smoke",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["carla_race"]
strict = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["carla", "carla.*", "pygame", "pygame.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
